# attnhut

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
attnhut/: __init__.py  bigbird.py  cjepa.py  compressed.py  deepseek_sparse.py  delta.py  differential.py  gqa.py  minimax_sparse.py  mla.py  mqa.py  rope.py  slot.py  standard.py  utils.py
tests/: conftest.py  test_bigbird.py  test_cjepa.py  test_compressed.py  test_deepseek_sparse.py  test_delta.py  test_dense.py  test_differential.py  test_minimax.py  test_mla.py  test_slot.py
